--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/Seiiko/miscat-chane#readme",
   "dependencies": {
+    "cat-facts": "^1.0.2",
     "discord.js": "^11.2.1",
     "random-fact": "^1.1.0"
   }
