--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cat-facts": "^1.0.2",
     "discord.js": "^11.2.1",
     "dog-facts": "^1.0.3",
+    "node-google-image-search": "^1.0.3",
     "random-fact": "^1.1.0"
   }
 }
